2016-06-14  Hanna Knutsson <hanna_k@fmgirl.com>

	* Make sure save filename ends with ".eqz"
	* Replace KDateEdit, KDatePicker, KLineEdit, KCompletion and KMessageBox with Qt widgets

2016-06-13  Hanna Knutsson <hanna_k@fmgirl.com>

	* QAction::setShortcut() => KActionCollection::setDefaultShortcut()

2014-07-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Restore remote file access

2014-07-11  Hanna Knutsson <hanna_k@fmgirl.com>

	* Port to Qt 5 and KDE Framework 5
	* Minor accumulated enhancements and fixes

2009-07-03  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix transaction not added on date edit enter (missing signal)
	* Fix csv export (change text/x-csv to text/csv)

2008-11-12  Hanna Knutsson <hanna_k@fmgirl.com>

	* KDE4 version commited

2008-03-04  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix mysterious crash when two scheduled transactions have the same date and description

2007-08-20  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix saving of weekly recurrence

2007-07-30  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix positive net result of split transaction displayed in wrong column

2007-05-04  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix calculation of scheduled transactions after a scheduled transaction has been confirmed
	* Fix calculation of scheduled transaction after the date has changed to before the current date
	* Sort scheduled transactions list after date changes
	* Fix security transaction joining

2007-03-30  Hanna Knutsson <hanna_k@fmgirl.com>

	* Allow user to select initial period
	* Do not limit sold shares to current number of shares
	* Fixes for the new value input widget

2007-03-29  Hanna Knutsson <hanna_k@fmgirl.com>

	* Keep permissions of exisiting files

2007-03-28  Hanna Knutsson <hanna_k@fmgirl.com>

	* Make it possible to join security transactions and add ability to create new security transaction from edit split dialog